--- a/virus_classifier.ipynb
+++ b/virus_classifier.ipynb
@@ -2,7 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Requirement already satisfied: torch in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.7.0)\nRequirement already satisfied: future in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (0.18.2)\nRequirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (3.7.4.3)\nRequirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (1.19.2)\nRequirement already satisfied: dataclasses in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (0.6)\n\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.3.1 is available.\nYou should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.7/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\nRequirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.1.4)\nRequirement already satisfied: python-dateutil>=2.7.3 in /Users/ksing121/Library/Python/3.7/lib/python/site-packages (from pandas) (2.8.1)\nRequirement already satisfied: pytz>=2017.2 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from pandas) (2020.4)\nRequirement already satisfied: numpy>=1.15.4 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from pandas) (1.19.2)\nRequirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.3.1 is available.\nYou should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.7/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\n"
+    }
+   ],
+   "source": [
+    "!pip3 install torch\n",
+    "!pip3 install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,22 +30,22 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
-    "from torch.utils.data import DataLoader, TensorDataset"
+    "from torch.utils.data import DataLoader, TensorDataset, Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = r\"C:/Code/bioinfo/data/fullset_test.csv\"\n",
+    "f = r\"data/fullset_test.csv\"\n",
     "df = pd.read_csv(f, names=[\"name\", \"seq\", \"class\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,18 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "(26405, 300)"
-      ]
+      "text/plain": "(26405, 300)"
      },
-     "execution_count": 108,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 33
     }
    ],
    "source": [
@@ -87,8 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "torch_tensor_output = torch.tensor(df['class'].values, dtype=torch.float)\n",
@@ -97,18 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "torch.int64"
-      ]
+      "text/plain": "torch.int64"
      },
-     "execution_count": 110,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 35
     }
    ],
    "source": [
@@ -117,18 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "torch.Size([26405, 300])"
-      ]
+      "text/plain": "torch.Size([26405, 300])"
      },
-     "execution_count": 78,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 36
     }
    ],
    "source": [
@@ -137,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,88 +201,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
+   "execution_count": 41,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\torch\\nn\\functional.py:2016: UserWarning: Using a target size (torch.Size([])) that is different to the input size (torch.Size([1])) is deprecated. Please ensure they have the same size.\n",
-      "  \"Please ensure they have the same size.\".format(target.size(), input.size()))\n"
-     ]
-    },
-    {
      "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1,  2000] loss: 0.751\n",
-      "[1,  4000] loss: 0.826\n",
-      "[1,  6000] loss: 0.990\n",
-      "[1,  8000] loss: 1.048\n",
-      "[1, 10000] loss: 1.079\n",
-      "[1, 12000] loss: 1.094\n",
-      "[1, 14000] loss: 1.151\n",
-      "[1, 16000] loss: 1.168\n",
-      "[1, 18000] loss: 1.123\n",
-      "[1, 20000] loss: 1.098\n",
-      "[1, 22000] loss: 1.084\n",
-      "[1, 24000] loss: 1.094\n",
-      "[1, 26000] loss: 1.096\n",
-      "[2,  2000] loss: 0.780\n",
-      "[2,  4000] loss: 0.834\n",
-      "[2,  6000] loss: 0.938\n",
-      "[2,  8000] loss: 1.018\n",
-      "[2, 10000] loss: 1.050\n",
-      "[2, 12000] loss: 1.067\n",
-      "[2, 14000] loss: 1.132\n",
-      "[2, 16000] loss: 1.136\n",
-      "[2, 18000] loss: 1.107\n",
-      "[2, 20000] loss: 1.079\n",
-      "[2, 22000] loss: 1.062\n",
-      "[2, 24000] loss: 1.061\n",
-      "[2, 26000] loss: 1.045\n",
-      "[3,  2000] loss: 0.824\n",
-      "[3,  4000] loss: 0.812\n",
-      "[3,  6000] loss: 0.899\n",
-      "[3,  8000] loss: 0.970\n",
-      "[3, 10000] loss: 1.000\n",
-      "[3, 12000] loss: 1.032\n",
-      "[3, 14000] loss: 1.093\n",
-      "[3, 16000] loss: 1.090\n",
-      "[3, 18000] loss: 1.063\n",
-      "[3, 20000] loss: 1.041\n",
-      "[3, 22000] loss: 1.021\n",
-      "[3, 24000] loss: 1.028\n",
-      "[3, 26000] loss: 1.041\n",
-      "[4,  2000] loss: 0.791\n",
-      "[4,  4000] loss: 0.825\n",
-      "[4,  6000] loss: 0.932\n",
-      "[4,  8000] loss: 1.017\n",
-      "[4, 10000] loss: 1.034\n",
-      "[4, 12000] loss: 1.047\n",
-      "[4, 14000] loss: 1.110\n",
-      "[4, 16000] loss: 1.115\n",
-      "[4, 18000] loss: 1.080\n",
-      "[4, 20000] loss: 1.053\n",
-      "[4, 22000] loss: 1.036\n",
-      "[4, 24000] loss: 1.043\n",
-      "[4, 26000] loss: 1.053\n",
-      "[5,  2000] loss: 0.743\n",
-      "[5,  4000] loss: 0.746\n",
-      "[5,  6000] loss: 0.870\n",
-      "[5,  8000] loss: 0.976\n",
-      "[5, 10000] loss: 1.009\n",
-      "[5, 12000] loss: 1.033\n",
-      "[5, 14000] loss: 1.090\n",
-      "[5, 16000] loss: 1.076\n",
-      "[5, 18000] loss: 1.048\n",
-      "[5, 20000] loss: 1.022\n",
-      "[5, 22000] loss: 1.019\n",
-      "[5, 24000] loss: 1.026\n",
-      "[5, 26000] loss: 1.035\n",
-      "Finished Training\n"
-     ]
+     "text": "[1,  2000] loss: 1.007\n[1,  4000] loss: 0.852\n[1,  6000] loss: 0.931\n[1,  8000] loss: 0.950\n[1, 10000] loss: 0.966\n[1, 12000] loss: 1.018\n[1, 14000] loss: 1.134\n[1, 16000] loss: 1.171\n[1, 18000] loss: 1.164\n[1, 20000] loss: 1.166\n[1, 22000] loss: 1.160\n[1, 24000] loss: 1.180\n[1, 26000] loss: 1.191\n[2,  2000] loss: 1.041\n[2,  4000] loss: 0.917\n[2,  6000] loss: 0.983\n[2,  8000] loss: 0.981\n[2, 10000] loss: 1.086\n[2, 12000] loss: 1.103\n[2, 14000] loss: 1.171\n[2, 16000] loss: 1.171\n[2, 18000] loss: 1.155\n[2, 20000] loss: 1.151\n[2, 22000] loss: 1.162\n[2, 24000] loss: 1.186\n[2, 26000] loss: 1.210\n[3,  2000] loss: 1.195\n[3,  4000] loss: 1.148\n[3,  6000] loss: 1.203\n[3,  8000] loss: 1.301\n[3, 10000] loss: 1.332\n[3, 12000] loss: 1.352\n[3, 14000] loss: 1.421\n[3, 16000] loss: 1.449\n[3, 18000] loss: 1.419\n[3, 20000] loss: 1.408\n[3, 22000] loss: 1.416\n[3, 24000] loss: 1.449\n[3, 26000] loss: 1.477\n[4,  2000] loss: 1.265\n[4,  4000] loss: 1.247\n[4,  6000] loss: 1.358\n[4,  8000] loss: 1.409\n[4, 10000] loss: 1.457\n[4, 12000] loss: 1.476\n[4, 14000] loss: 1.544\n[4, 16000] loss: 1.548\n[4, 18000] loss: 1.518\n[4, 20000] loss: 1.510\n[4, 22000] loss: 1.501\n[4, 24000] loss: 1.510\n[4, 26000] loss: 1.530\n[5,  2000] loss: 1.344\n[5,  4000] loss: 1.309\n[5,  6000] loss: 1.373\n[5,  8000] loss: 1.429\n[5, 10000] loss: 1.515\n[5, 12000] loss: 1.533\n[5, 14000] loss: 1.577\n[5, 16000] loss: 1.588\n[5, 18000] loss: 1.561\n[5, 20000] loss: 1.548\n[5, 22000] loss: 1.543\n[5, 24000] loss: 1.554\n[5, 26000] loss: 1.560\nFinished Training\n"
     }
    ],
    "source": [
@@ -277,9 +220,107 @@
     "        # zero the parameter gradients\n",
     "        optimizer.zero_grad()\n",
     "\n",
+    "        labels = labels.view(1)\n",
     "        # forward + backward + optimize\n",
     "        outputs = net(inputs)\n",
-    "        # print(outputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # print statistics\n",
+    "        epoch_loss += loss.item()\n",
+    "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
+    "            print('[%d, %5d] loss: %.3f' %\n",
+    "                  (epoch + 1, i + 1, epoch_loss / (i + 1)))\n",
+    "\n",
+    "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "class seqData(Dataset):   \n",
+    "    def __init__(self, sequences, labels):\n",
+    "        self.data = torch.from_numpy(sequences)\n",
+    "        self.labels = torch.tensor(labels, dtype=torch.float)\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.data)   \n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        label = self.labels[index]\n",
+    "        data_val = self.data[index]\n",
+    "        return data_val,label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train_dataset = seqData(data2, df['class'].values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "(tensor([1, 3, 0, 3, 2, 0, 2, 0, 1, 0, 1, 2, 1, 3, 1, 3, 3, 3, 3, 2, 0, 3, 3, 1,\n         3, 3, 3, 3, 0, 0, 1, 0, 0, 0, 2, 0, 3, 2, 0, 2, 0, 0, 1, 1, 0, 2, 0, 1,\n         0, 3, 2, 1, 0, 3, 1, 0, 1, 1, 1, 1, 3, 2, 2, 1, 1, 1, 1, 1, 2, 0, 1, 1,\n         1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 1, 0, 2, 2, 1, 2, 0, 1, 0, 1,\n         1, 1, 1, 0, 1, 0, 0, 0, 2, 1, 1, 0, 1, 3, 1, 0, 0, 3, 1, 1, 3, 3, 2, 1,\n         1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 3, 2, 0, 0, 1, 0, 1, 0, 0, 0,\n         0, 2, 0, 0, 0, 0, 0, 0, 1, 3, 2, 1, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0, 3,\n         2, 0, 0, 1, 3, 3, 1, 1, 1, 1, 2, 0, 0, 3, 0, 1, 3, 1, 3, 3, 1, 2, 1, 2,\n         0, 0, 0, 3, 1, 3, 1, 3, 0, 1, 1, 1, 2, 2, 0, 3, 3, 3, 3, 1, 1, 2, 2, 2,\n         0, 0, 3, 0, 2, 2, 2, 1, 1, 2, 0, 3, 0, 1, 2, 1, 3, 2, 0, 0, 3, 3, 1, 2,\n         0, 0, 1, 1, 1, 3, 1, 0, 0, 1, 0, 0, 1, 0, 2, 1, 0, 1, 3, 0, 1, 3, 1, 1,\n         0, 2, 2, 1, 2, 3, 1, 3, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 0, 2, 1, 2, 1, 1,\n         1, 2, 0, 2, 0, 0, 3, 2, 0, 0, 2, 2]),\n tensor(0.))"
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "train_dataset.__getitem__(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BAT_SIZE = 1\n",
+    "train_loader = DataLoader(train_dataset, batch_size=BAT_SIZE, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[1,  2000] loss: 1.865\n[1,  4000] loss: 1.774\n[1,  6000] loss: 1.619\n[1,  8000] loss: 1.604\n[1, 10000] loss: 1.604\n[1, 12000] loss: 1.654\n[1, 14000] loss: 1.617\n[1, 16000] loss: 1.598\n[1, 18000] loss: 1.549\n[1, 20000] loss: 1.540\n[1, 22000] loss: 1.531\n[1, 24000] loss: 1.518\n[1, 26000] loss: 1.533\n[2,  2000] loss: 1.627\n[2,  4000] loss: 1.627\n[2,  6000] loss: 1.662\n[2,  8000] loss: 1.638\n[2, 10000] loss: 1.756\n[2, 12000] loss: 1.732\n[2, 14000] loss: 1.707\n[2, 16000] loss: 1.699\n[2, 18000] loss: 1.700\n[2, 20000] loss: 1.684\n[2, 22000] loss: 1.668\n[2, 24000] loss: 1.613\n[2, 26000] loss: 1.583\n[3,  2000] loss: 1.335\n[3,  4000] loss: 1.507\n[3,  6000] loss: 1.532\n[3,  8000] loss: 1.585\n[3, 10000] loss: 1.615\n[3, 12000] loss: 1.543\n[3, 14000] loss: 1.537\n[3, 16000] loss: 1.606\n[3, 18000] loss: 1.619\n[3, 20000] loss: 1.601\n[3, 22000] loss: 1.629\n[3, 24000] loss: 1.619\n[3, 26000] loss: 1.609\n[4,  2000] loss: 1.445\n[4,  4000] loss: 1.448\n[4,  6000] loss: 1.476\n[4,  8000] loss: 1.595\n[4, 10000] loss: 1.563\n[4, 12000] loss: 1.642\n[4, 14000] loss: 1.661\n[4, 16000] loss: 1.614\n[4, 18000] loss: 1.613\n[4, 20000] loss: 1.630\n[4, 22000] loss: 1.612\n[4, 24000] loss: 1.604\n[4, 26000] loss: 1.607\n[5,  2000] loss: 1.480\n[5,  4000] loss: 1.530\n[5,  6000] loss: 1.611\n[5,  8000] loss: 1.615\n[5, 10000] loss: 1.660\n[5, 12000] loss: 1.616\n[5, 14000] loss: 1.681\n[5, 16000] loss: 1.651\n[5, 18000] loss: 1.665\n[5, 20000] loss: 1.634\n[5, 22000] loss: 1.605\n[5, 24000] loss: 1.649\n[5, 26000] loss: 1.608\nFinished Training\n"
+    }
+   ],
+   "source": [
+    "for epoch in range(5):  # loop over the dataset multiple times\n",
+    "    epoch_loss = 0.0\n",
+    "    for i, (inputs, labels) in enumerate(train_loader):\n",
+    "\n",
+    "        # zero the parameter gradients\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        #labels = labels.view(1)\n",
+    "        # forward + backward + optimize\n",
+    "        outputs = net(inputs)\n",
     "        loss = criterion(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -296,9 +337,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.9 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python_defaultSpec_1607319086246"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.9-final"
   }
  },
  "nbformat": 4,
