--- a/virus_classifier.ipynb
+++ b/virus_classifier.ipynb
@@ -2,27 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "# !pip3 install torch\n",
+    "# !pip3 install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Requirement already satisfied: torch in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.7.0)\nRequirement already satisfied: future in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (0.18.2)\nRequirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (3.7.4.3)\nRequirement already satisfied: numpy in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (1.19.2)\nRequirement already satisfied: dataclasses in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from torch) (0.6)\n\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.3.1 is available.\nYou should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.7/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\nRequirement already satisfied: pandas in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (1.1.4)\nRequirement already satisfied: python-dateutil>=2.7.3 in /Users/ksing121/Library/Python/3.7/lib/python/site-packages (from pandas) (2.8.1)\nRequirement already satisfied: pytz>=2017.2 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from pandas) (2020.4)\nRequirement already satisfied: numpy>=1.15.4 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from pandas) (1.19.2)\nRequirement already satisfied: six>=1.5 in /Library/Frameworks/Python.framework/Versions/3.7/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n\u001b[33mWARNING: You are using pip version 20.1.1; however, version 20.3.1 is available.\nYou should consider upgrading via the '/Library/Frameworks/Python.framework/Versions/3.7/bin/python3.7 -m pip install --upgrade pip' command.\u001b[0m\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ignite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-1598b5d1429d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mignite\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ignite'"
+     ]
     }
    ],
    "source": [
-    "!pip3 install torch\n",
-    "!pip3 install pandas"
+    "import ignite"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ignite'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-9a4e8a5e56b4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mDataLoader\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTensorDataset\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataset\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mignite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mEvents\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_supervised_trainer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcreate_supervised_evaluator\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mignite\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mAccuracy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLoss\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'ignite'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import torch\n",
@@ -30,221 +57,29 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "import numpy as np\n",
-    "from torch.utils.data import DataLoader, TensorDataset, Dataset"
+    "from torch.utils.data import DataLoader, TensorDataset, Dataset\n",
+    "from ignite.engine import Events, create_supervised_trainer, create_supervised_evaluator\n",
+    "from ignite.metrics import Accuracy, Loss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f = r\"data/fullset_test.csv\"\n",
-    "df = pd.read_csv(f, names=[\"name\", \"seq\", \"class\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mapping = {'A': 0, 'T': 1, 'C': 2, 'G': 3}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mapping_fn(string):\n",
-    "    x = [mapping[x] for x in string]\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = df[\"seq\"].apply(lambda x: mapping_fn(x))\n",
-    "data2 = np.zeros((len(df), 300), dtype=np.int64)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i, d in enumerate(data):\n",
-    "    data2[i, :] = d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "(26405, 300)"
-     },
-     "metadata": {},
-     "execution_count": 33
-    }
-   ],
-   "source": [
-    "data2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "torch_tensor_output = torch.tensor(df['class'].values, dtype=torch.float)\n",
-    "torch_tensor_vectors = torch.from_numpy(data2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "torch.int64"
-     },
-     "metadata": {},
-     "execution_count": 35
-    }
-   ],
-   "source": [
-    "torch_tensor_vectors.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "torch.Size([26405, 300])"
-     },
-     "metadata": {},
-     "execution_count": 36
-    }
-   ],
-   "source": [
-    "torch_tensor_vectors.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "EMBEDDING_VEC_SIZE = 32\n",
-    "DNA_BASES = 4"
+    "DNA_BASES = 4\n",
+    "BAT_SIZE = 128"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Example(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super(Example, self).__init__()\n",
-    "        self.embed = nn.Embedding(DNA_BASES, EMBEDDING_VEC_SIZE)\n",
-    "        self.fc = nn.Linear(300 * 32, 1)\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        x = self.embed(x)\n",
-    "        x = x.flatten()\n",
-    "        x = self.fc(x)\n",
-    "        return torch.sigmoid(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "net = Example()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "criterion = nn.BCELoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "[1,  2000] loss: 1.007\n[1,  4000] loss: 0.852\n[1,  6000] loss: 0.931\n[1,  8000] loss: 0.950\n[1, 10000] loss: 0.966\n[1, 12000] loss: 1.018\n[1, 14000] loss: 1.134\n[1, 16000] loss: 1.171\n[1, 18000] loss: 1.164\n[1, 20000] loss: 1.166\n[1, 22000] loss: 1.160\n[1, 24000] loss: 1.180\n[1, 26000] loss: 1.191\n[2,  2000] loss: 1.041\n[2,  4000] loss: 0.917\n[2,  6000] loss: 0.983\n[2,  8000] loss: 0.981\n[2, 10000] loss: 1.086\n[2, 12000] loss: 1.103\n[2, 14000] loss: 1.171\n[2, 16000] loss: 1.171\n[2, 18000] loss: 1.155\n[2, 20000] loss: 1.151\n[2, 22000] loss: 1.162\n[2, 24000] loss: 1.186\n[2, 26000] loss: 1.210\n[3,  2000] loss: 1.195\n[3,  4000] loss: 1.148\n[3,  6000] loss: 1.203\n[3,  8000] loss: 1.301\n[3, 10000] loss: 1.332\n[3, 12000] loss: 1.352\n[3, 14000] loss: 1.421\n[3, 16000] loss: 1.449\n[3, 18000] loss: 1.419\n[3, 20000] loss: 1.408\n[3, 22000] loss: 1.416\n[3, 24000] loss: 1.449\n[3, 26000] loss: 1.477\n[4,  2000] loss: 1.265\n[4,  4000] loss: 1.247\n[4,  6000] loss: 1.358\n[4,  8000] loss: 1.409\n[4, 10000] loss: 1.457\n[4, 12000] loss: 1.476\n[4, 14000] loss: 1.544\n[4, 16000] loss: 1.548\n[4, 18000] loss: 1.518\n[4, 20000] loss: 1.510\n[4, 22000] loss: 1.501\n[4, 24000] loss: 1.510\n[4, 26000] loss: 1.530\n[5,  2000] loss: 1.344\n[5,  4000] loss: 1.309\n[5,  6000] loss: 1.373\n[5,  8000] loss: 1.429\n[5, 10000] loss: 1.515\n[5, 12000] loss: 1.533\n[5, 14000] loss: 1.577\n[5, 16000] loss: 1.588\n[5, 18000] loss: 1.561\n[5, 20000] loss: 1.548\n[5, 22000] loss: 1.543\n[5, 24000] loss: 1.554\n[5, 26000] loss: 1.560\nFinished Training\n"
-    }
-   ],
-   "source": [
-    "for epoch in range(5):  # loop over the dataset multiple times\n",
-    "    epoch_loss = 0.0\n",
-    "    for i, (inputs, labels) in enumerate(zip(torch_tensor_vectors, torch_tensor_output)):\n",
-    "\n",
-    "        # zero the parameter gradients\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        labels = labels.view(1)\n",
-    "        # forward + backward + optimize\n",
-    "        outputs = net(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        # print statistics\n",
-    "        epoch_loss += loss.item()\n",
-    "        if i % 2000 == 1999:    # print every 2000 mini-batches\n",
-    "            print('[%d, %5d] loss: %.3f' %\n",
-    "                  (epoch + 1, i + 1, epoch_loss / (i + 1)))\n",
-    "\n",
-    "print('Finished Training')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class seqData(Dataset):   \n",
+    "class SeqData(Dataset):   \n",
     "    def __init__(self, sequences, labels):\n",
     "        self.data = torch.from_numpy(sequences)\n",
     "        self.labels = torch.tensor(labels, dtype=torch.float)\n",
@@ -260,65 +95,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "train_dataset = seqData(data2, df['class'].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "(tensor([1, 3, 0, 3, 2, 0, 2, 0, 1, 0, 1, 2, 1, 3, 1, 3, 3, 3, 3, 2, 0, 3, 3, 1,\n         3, 3, 3, 3, 0, 0, 1, 0, 0, 0, 2, 0, 3, 2, 0, 2, 0, 0, 1, 1, 0, 2, 0, 1,\n         0, 3, 2, 1, 0, 3, 1, 0, 1, 1, 1, 1, 3, 2, 2, 1, 1, 1, 1, 1, 2, 0, 1, 1,\n         1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 3, 1, 1, 1, 0, 2, 2, 1, 2, 0, 1, 0, 1,\n         1, 1, 1, 0, 1, 0, 0, 0, 2, 1, 1, 0, 1, 3, 1, 0, 0, 3, 1, 1, 3, 3, 2, 1,\n         1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 0, 0, 1, 3, 2, 0, 0, 1, 0, 1, 0, 0, 0,\n         0, 2, 0, 0, 0, 0, 0, 0, 1, 3, 2, 1, 0, 0, 0, 0, 0, 2, 0, 1, 0, 0, 0, 3,\n         2, 0, 0, 1, 3, 3, 1, 1, 1, 1, 2, 0, 0, 3, 0, 1, 3, 1, 3, 3, 1, 2, 1, 2,\n         0, 0, 0, 3, 1, 3, 1, 3, 0, 1, 1, 1, 2, 2, 0, 3, 3, 3, 3, 1, 1, 2, 2, 2,\n         0, 0, 3, 0, 2, 2, 2, 1, 1, 2, 0, 3, 0, 1, 2, 1, 3, 2, 0, 0, 3, 3, 1, 2,\n         0, 0, 1, 1, 1, 3, 1, 0, 0, 1, 0, 0, 1, 0, 2, 1, 0, 1, 3, 0, 1, 3, 1, 1,\n         0, 2, 2, 1, 2, 3, 1, 3, 1, 1, 1, 1, 2, 2, 1, 1, 1, 2, 0, 2, 1, 2, 1, 1,\n         1, 2, 0, 2, 0, 0, 3, 2, 0, 0, 2, 2]),\n tensor(0.))"
-     },
-     "metadata": {},
-     "execution_count": 44
-    }
-   ],
-   "source": [
-    "train_dataset.__getitem__(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "BAT_SIZE = 1\n",
-    "train_loader = DataLoader(train_dataset, batch_size=BAT_SIZE, shuffle=True)"
+    "def get_data_loader(fname):\n",
+    "    df = pd.read_csv(fname, names=[\"name\", \"seq\", \"class\"])\n",
+    "    mapping = {'A': 0, 'T': 1, 'C': 2, 'G': 3}\n",
+    "    def mapping_fn(string):\n",
+    "        x = [mapping[x] for x in string]\n",
+    "        return x\n",
+    "    column = df[\"seq\"].apply(lambda x: mapping_fn(x))\n",
+    "    data = np.zeros((len(df), 300), dtype=np.int64)\n",
+    "    for i, d in enumerate(data):\n",
+    "        data[i, :] = d\n",
+    "    dataset = SeqData(data, df['class'].values)\n",
+    "    data_loader = DataLoader(dataset, batch_size=BAT_SIZE, shuffle=True, drop_last=True)\n",
+    "    return data_loader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Example(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(Example, self).__init__()\n",
+    "        self.embed = nn.Embedding(DNA_BASES, EMBEDDING_VEC_SIZE)\n",
+    "        self.fc = nn.Linear(300 * 32, 1)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = self.embed(x)\n",
+    "        x = x.view(BAT_SIZE, -1)\n",
+    "        x = self.fc(x)\n",
+    "        return torch.sigmoid(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = get_data_loader(\"data/fullset_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = Example()\n",
+    "criterion = nn.BCELoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "[1,  2000] loss: 1.865\n[1,  4000] loss: 1.774\n[1,  6000] loss: 1.619\n[1,  8000] loss: 1.604\n[1, 10000] loss: 1.604\n[1, 12000] loss: 1.654\n[1, 14000] loss: 1.617\n[1, 16000] loss: 1.598\n[1, 18000] loss: 1.549\n[1, 20000] loss: 1.540\n[1, 22000] loss: 1.531\n[1, 24000] loss: 1.518\n[1, 26000] loss: 1.533\n[2,  2000] loss: 1.627\n[2,  4000] loss: 1.627\n[2,  6000] loss: 1.662\n[2,  8000] loss: 1.638\n[2, 10000] loss: 1.756\n[2, 12000] loss: 1.732\n[2, 14000] loss: 1.707\n[2, 16000] loss: 1.699\n[2, 18000] loss: 1.700\n[2, 20000] loss: 1.684\n[2, 22000] loss: 1.668\n[2, 24000] loss: 1.613\n[2, 26000] loss: 1.583\n[3,  2000] loss: 1.335\n[3,  4000] loss: 1.507\n[3,  6000] loss: 1.532\n[3,  8000] loss: 1.585\n[3, 10000] loss: 1.615\n[3, 12000] loss: 1.543\n[3, 14000] loss: 1.537\n[3, 16000] loss: 1.606\n[3, 18000] loss: 1.619\n[3, 20000] loss: 1.601\n[3, 22000] loss: 1.629\n[3, 24000] loss: 1.619\n[3, 26000] loss: 1.609\n[4,  2000] loss: 1.445\n[4,  4000] loss: 1.448\n[4,  6000] loss: 1.476\n[4,  8000] loss: 1.595\n[4, 10000] loss: 1.563\n[4, 12000] loss: 1.642\n[4, 14000] loss: 1.661\n[4, 16000] loss: 1.614\n[4, 18000] loss: 1.613\n[4, 20000] loss: 1.630\n[4, 22000] loss: 1.612\n[4, 24000] loss: 1.604\n[4, 26000] loss: 1.607\n[5,  2000] loss: 1.480\n[5,  4000] loss: 1.530\n[5,  6000] loss: 1.611\n[5,  8000] loss: 1.615\n[5, 10000] loss: 1.660\n[5, 12000] loss: 1.616\n[5, 14000] loss: 1.681\n[5, 16000] loss: 1.651\n[5, 18000] loss: 1.665\n[5, 20000] loss: 1.634\n[5, 22000] loss: 1.605\n[5, 24000] loss: 1.649\n[5, 26000] loss: 1.608\nFinished Training\n"
+     "output_type": "stream",
+     "text": [
+      "Finished Training\n"
+     ]
     }
    ],
    "source": [
-    "for epoch in range(5):  # loop over the dataset multiple times\n",
+    "for epoch in range(1):  # loop over the dataset multiple times\n",
     "    epoch_loss = 0.0\n",
     "    for i, (inputs, labels) in enumerate(train_loader):\n",
     "\n",
     "        # zero the parameter gradients\n",
     "        optimizer.zero_grad()\n",
     "\n",
-    "        #labels = labels.view(1)\n",
+    "        labels = labels.view(BAT_SIZE, 1)\n",
     "        # forward + backward + optimize\n",
     "        outputs = net(inputs)\n",
     "        loss = criterion(outputs, labels)\n",
@@ -337,9 +195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python_defaultSpec_1607319086246"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -351,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
